[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameOverMenu.gd" type="Script" id=1]

[node name="GameOverMenu" type="Node2D"]
script = ExtResource( 1 )
time_label = NodePath("VBoxContainer/Time")

[node name="Exit" type="Button" parent="."]
margin_left = 289.0
margin_top = 312.0
margin_right = 328.0
margin_bottom = 332.0
text = "EXIT"

[node name="BackToMainMenu" type="Button" parent="."]
margin_left = 265.0
margin_top = 246.0
margin_right = 356.0
margin_bottom = 266.0
text = "MAIN MENU"

[node name="Retry" type="Button" parent="."]
margin_left = 287.0
margin_top = 210.0
margin_right = 336.0
margin_bottom = 230.0
text = "RETRY"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 202.0
margin_top = 134.0
margin_right = 430.0
margin_bottom = 148.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 234.0
margin_top = 140.0
margin_right = 387.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timescore" type="Label" parent="VBoxContainer"]
margin_right = 153.0
margin_bottom = 14.0
text = "Timescore:"
align = 1

[node name="Time" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 153.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "7 und dr√∂lfzig Sekunden"
align = 1

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
